--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "@testing-library/user-event": "^13.5.0",
     "@vercel/speed-insights": "^1.0.9",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-google-charts": "^4.0.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.21.3",
     "react-scripts": "^5.0.1",
