--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
     "cloudinary-react": "^1.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
+    "react-calendar": "^4.8.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.1",
+    "react-minimal-side-navigation": "^1.9.2",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.21.3",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.30.2",
     "react-toastify": "^10.0.4",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
