--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.1",
+    "react-icons": "^5.0.1",
+    "react-image-gallery": "^1.3.0",
     "react-minimal-side-navigation": "^1.9.2",
     "react-modal": "^3.16.1",
+    "react-rater": "^6.0.5",
     "react-router-dom": "^6.21.3",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.30.2",
