--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-minimal-side-navigation": "^1.9.2",
     "react-modal": "^3.16.1",
     "react-rater": "^6.0.5",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.30.2",
