--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.1",
     "cloudinary-react": "^1.8.1",
+    "rc-slider": "^10.5.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
+    "react-bootstrap-range-slider": "^3.0.8",
     "react-calendar": "^4.8.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
